--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "google-spreadsheet": "^3.1.15",
     "multer": "^1.4.3",
     "nodemailer": "^6.6.3"
   },
